feat: mono for easy code manage

--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "minipack",
-  "packageManager": "yarn@4.2.2",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "devDependencies": {
-    "@types/babel__core": "^7",
-    "@types/babel__traverse": "^7",
-    "@types/node": "^20",
-    "typescript": "^5.8.2"
-  },
-  "dependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/parser": "^7.27.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/traverse": "^7.27.0"
-  }
+    "name": "@minipack/monorepo",
+    "private": true,
+    "packageManager": "yarn@4.2.2",
+    "workspaces": [
+        "packages/*",
+        "apps/*"
+    ]
 }
